Upgrade to Gradle 7.2; Java 17